fix: Fix the alignement of the static footer

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -100,9 +100,6 @@
         .instagram:hover {
             color: $acid
         }
-        .number {
-            padding-left: $spacing-gap;
-        }
         .number-a:hover {
             color: $acid
         }
